--- a/SudokuJavaFX/src/main/resources/game/app/view/GameTheme.css
+++ b/SudokuJavaFX/src/main/resources/game/app/view/GameTheme.css
@@ -12,19 +12,47 @@
 -fx-background-insets: 0.0, 0.0 1.0 1.0 0.0 ;
 	
 }
- 
+ /*
+ A series of size values or sets of four size values, separated by commas. 
+ * A single size value means all insets are the same. 
+ * Otherwise, the four values for each inset are given in the order:
+ * 	 	top, 
+ * 		right, 
+ * 		bottom, 
+ * 		left.
+ *  
+ * Each comma-separated value or set of values in the series applies to the corresponding background color.
+  */
 .game-grid-cell {
     -fx-background-color: black, white ;
     -fx-background-insets: 0, 0 1 1 0 ;
 }
+
 .game-grid-cell.first-row {
-    -fx-background-insets: 0, 1 1 1 0 ;
+    -fx-background-insets: 0, 5 1 1 0 ;
 }
+
 .game-grid-cell.first-column {
-    -fx-background-insets: 0, 0 1 1 1 ;
+    -fx-background-insets: 0, 0 1 1 5 ;
 }
+
+.game-grid-cell.last-row {
+    -fx-background-insets: 0, 1 1 5 0 ;
+}
+
+.game-grid-cell.last-column {
+    -fx-background-insets: 0, 1 5 1 0 ;
+}
+/*
+.game-grid-cell.regionRow {
+    -fx-background-color: black, white ;
+    -fx-background-insets: 0, 2 1 1 0 ;
+}
+ */
+
+
 .game-grid-cell.first-row.first-column {
-    -fx-background-insets: 0, 1 ;
+    -fx-background-insets: 0, 5 1 1 5 ;
 }
 
 /*
