--- a/SudokuJavaFX/src/main/resources/game/app/view/Sudoku.fxml
+++ b/SudokuJavaFX/src/main/resources/game/app/view/Sudoku.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane prefHeight="700.0" prefWidth="500.0" stylesheets="@GameTheme.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.controller.SudokuController">
+<BorderPane prefHeight="700.0" prefWidth="500.0" stylesheets="@GameTheme2.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.controller.SudokuController">
    <bottom>
       <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <children>
@@ -17,6 +17,6 @@
       <HBox prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
    </top>
    <center>
-      <VBox fx:id="vboxCenter" alignment="CENTER" maxWidth="300.0" BorderPane.alignment="CENTER" />
+      <VBox fx:id="vboxCenter" alignment="CENTER" maxWidth="500.0" BorderPane.alignment="CENTER" />
    </center>
 </BorderPane>
