--- a/SudokuJavaFX/src/main/resources/game/app/view/GameBorder.fxml
+++ b/SudokuJavaFX/src/main/resources/game/app/view/GameBorder.fxml
@@ -3,20 +3,28 @@
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.RadioMenuItem?>
+<?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.layout.BorderPane?>
 
 <BorderPane prefWidth="800.0" stylesheets="@GameTheme2.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.controller.GameBorderController">
    <top>
-      <MenuBar prefHeight="41.0" prefWidth="800.0" BorderPane.alignment="CENTER">
+      <MenuBar prefHeight="31.0" prefWidth="800.0" BorderPane.alignment="CENTER">
         <menus>
           <Menu mnemonicParsing="false" text="File">
             <items>
               <MenuItem mnemonicParsing="false" text="Close" />
             </items>
           </Menu>
-          <Menu mnemonicParsing="false" text="Edit">
+          <Menu mnemonicParsing="false" text="Difficulty">
             <items>
-              <MenuItem mnemonicParsing="false" text="Delete" />
+                  <RadioMenuItem id="Easy" mnemonicParsing="false" text="Easy">
+                     <toggleGroup>
+                        <ToggleGroup fx:id="tgDifficulty" />
+                     </toggleGroup>
+                  </RadioMenuItem>
+                  <RadioMenuItem id="Medium" mnemonicParsing="false" selected="true" text="Medium" toggleGroup="$tgDifficulty" />
+                  <RadioMenuItem id="Hard" mnemonicParsing="false" text="Hard" toggleGroup="$tgDifficulty" />
             </items>
           </Menu>
           <Menu mnemonicParsing="false" text="Help">
