--- a/SudokuJavaFX/src/main/resources/game/app/view/GameTheme2.css
+++ b/SudokuJavaFX/src/main/resources/game/app/view/GameTheme2.css
@@ -1,7 +1,15 @@
 .GridPane {
     -fx-background-color: #CCFF99;	
 }
- 
+
+.bg-black-style {
+    -fx-background-color:  black;
+}
+
+ .ErrorCondition {
+    -fx-background-color: red;
+}
+
  .VBoxGameGrid {
     -fx-background-color: #00FF99;	
 }
@@ -26,17 +34,17 @@
 }
 
 .game-grid-cell.first-column {
-    -fx-background-insets: 0.0, 1.0 1.0 1.0 5 ;
+    -fx-background-insets: 0.0, 1.0 1.0 1.0 5.0 ;
 }
 
 .game-grid-cell.last-column {
-    -fx-background-insets: 0.0, 1.0 5.0 1.0 1 ;
+    -fx-background-insets: 0.0, 1.0 5.0 1.0 1.0 ;
 }
 .game-grid-cell.first-row.first-column {
-    -fx-background-insets: 0.0, 5 0 1 5 ;
+    -fx-background-insets: 0.0, 5.0 0.0 1.0 5.0 ;
 }
 .game-grid-cell.last-row.first-column {
-    -fx-background-insets: 0.0, 1 1 5 5 ;
+    -fx-background-insets: 0.0, 1.0 1.0 5.0 5.0 ;
 }
 /*
 .my-grid-pane {
