--- a/SudokuJavaFX/src/main/resources/game/app/view/Sudoku.fxml
+++ b/SudokuJavaFX/src/main/resources/game/app/view/Sudoku.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.layout.BorderPane?>
@@ -8,11 +9,11 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<BorderPane prefHeight="242.0" prefWidth="306.0" stylesheets="@GameTheme2.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.controller.SudokuController">
+<BorderPane stylesheets="@GameTheme2.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.controller.SudokuController">
    <bottom>
       <HBox alignment="CENTER" prefHeight="82.0" prefWidth="306.0" BorderPane.alignment="CENTER">
          <children>
-            <Button mnemonicParsing="false" onAction="#ButtonPush" text="Start Game" />
+            <Button mnemonicParsing="false" onAction="#btnStartGame" text="Start Game" />
             <Button mnemonicParsing="false" text="End Game" />
          </children></HBox>
    </bottom>
@@ -35,7 +36,10 @@
       <SplitPane dividerPositions="0.6106870229007634" orientation="VERTICAL" prefHeight="200.0" prefWidth="160.0" BorderPane.alignment="CENTER">
          <items>
             <HBox fx:id="hboxGrid" alignment="CENTER" prefHeight="100.0" prefWidth="200.0" />
-            <HBox fx:id="hboxNumbers" alignment="CENTER" prefHeight="42.0" prefWidth="304.0" />
+            <HBox fx:id="hboxNumbers" alignment="CENTER" prefHeight="48.0" prefWidth="471.0">
+               <opaqueInsets>
+                  <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
+               </opaqueInsets></HBox>
          </items>
       </SplitPane>
    </center>
